--- a/sass/pages/_accueil.scss
+++ b/sass/pages/_accueil.scss
@@ -71,7 +71,7 @@
     }
     .btn_explorer {
         @include bouton;
-    }
+    }  
 }
 
 /* Etapes de fonctionnement du site */
@@ -90,16 +90,30 @@
         width: 100%;
         .choisir {
             @include etape;
+            &:hover {
+                background-color: lighten($color-primary, 34%);
+                .icon i {
+                color: $color-primary;
+                }
+            }
         }
         .composer {
             @include etape;
+            &:hover {
+                background-color: lighten($color-primary, 34%);
+                .icon i {
+                color: $color-primary;
+                }
+            }
         }
         .deguster {
             @include etape;
-            background-color: lighten($color-primary, 34%);
-            .icon i {
+            &:hover {
+                background-color: lighten($color-primary, 34%);
+                .icon i {
                 color: $color-primary;
-            }
+                }
+            }       
         }
     }
 }
