--- a/sass/pages/_restaurant.scss
+++ b/sass/pages/_restaurant.scss
@@ -32,7 +32,7 @@ img {
         i {
             font-size: 25px;
             &:hover {
-                background-image: url('../../images/logo/heart-solid.svg');
+                background-image: url('../images/logo/heart-solid.svg');
                 color: $color-secondary;
             }
         }
