--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -16,7 +16,11 @@
     box-shadow: 5px 5px 5px darken($color-grey, 5%);
     margin-bottom: 20px;
     @media only screen and (min-width: 600px) {
-        width: 350px;
+        width: 525px;
+        margin: 20px;
+    }
+    @media only screen and (min-width: 1700px) {
+        width: 28%;
         margin: 20px;
     }
     .numero {
@@ -121,7 +125,7 @@
                 i {
                     font-size: 25px;
                     &:hover {
-                        background-image: url('../../images/logo/heart-solid.svg');
+                        background-image: url('../images/logo/heart-solid.svg');
                         color: $color-secondary;
                     }
                 }
@@ -137,20 +141,15 @@
     border: none;
     border-radius: 30px 30px 30px 30px;
     box-shadow: 5px 5px 5px darken($color-grey, 15%);
+    color: $color-white;
+    font-size: 16px;
+    font-family: 'robotomedium', sans-serif;
+    cursor: pointer;
     background: linear-gradient(to bottom right, $color-secondary, $color-primary); 
     &:hover {
         box-shadow: 5px 5px 5px darken($color-grey, 25%);
         background: linear-gradient(to bottom right, lighten($color-secondary, 3%), lighten($color-primary, 3%));
     } 
-    a {
-        text-decoration: none;
-        p {
-            color: $color-white;
-            font-size: 16px;
-            margin: 0;
-            text-decoration: none;
-        }  
-    }
 }
 
 /* Animation d'apparition progressive */
